remove zip file after build

--- a/weblogic12c-full/Dockerfile
+++ b/weblogic12c-full/Dockerfile
@@ -19,7 +19,7 @@ RUN echo oracle:welcome1 | chpasswd
 ADD create-wls-domain.py /u01/create-wls-domain.py
 ADD oraInst.loc /u01/oraInst.loc
 ADD install.file /u01/install.file
-ADD wls12c_full.jar /u01/wls12c_full.jar
+ADD fmw_12.1.3.0.0_wls.jar /u01/fmw_12.1.3.0.0_wls.jar
 
 RUN chown oracle:oracle -R /u01
 
@@ -29,7 +29,7 @@ USER oracle
 
 RUN mkdir /u01/oracle/.inventory
 ENV CONFIG_JVM_ARGS -Djava.security.egd=file:/dev/./urandom
-RUN java -jar wls12c_full.jar -silent -responseFile /u01/install.file -invPtrLoc /u01/oraInst.loc -jreLoc /usr/lib/jvm/java-7-oracle
+RUN java -jar fmw_12.1.3.0.0_wls.jar -silent -responseFile /u01/install.file -invPtrLoc /u01/oraInst.loc -jreLoc /usr/lib/jvm/java-7-oracle
 RUN /u01/oracle/home/wlserver/common/bin/wlst.sh -skipWLSModuleScanning /u01/create-wls-domain.py
 RUN rm -f /u01/create-wls-domain.py /u01/oraInst.loc /u01/install.file
 RUN echo ". /u01/oracle/home/user_projects/domains/base_domain/bin/setDomainEnv.sh" >> /u01/oracle/.bashrc
