--- a/weblogic12c-zip/Dockerfile
+++ b/weblogic12c-zip/Dockerfile
@@ -1,7 +1,10 @@
 #
-# Oracle Dockerfile for WebLogic 12.1.2 Full Distro
+# Oracle Dockerfile for WebLogic 12.1.3 ZIP Distro
+# 
+# Download wls1213_dev.zip from www.oracle.com/technetwork/middleware/weblogic/downloads/index.html
+# and put it in the same dir as this Dockerfile
 #
-# https://github.com/oracle/docker
+# https://github.com/weblogic-community/weblogic-docker
 #
 
 # Pull base image
